--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Aurum Motors</title>
+
+    <!-- ✅ Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Optional: Configure Tailwind theme (gold accent, etc.) -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              gold: "#FFD700",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
+  <body class="bg-gray-900 text-white">
     <div id="root"></div>
+
+    <!-- your JS bundle (Vite/React/etc.) -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
